--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -1,3 +1,32 @@
-title: Site
-preset: pages
-unlisted: true
+title: 
+  en: Site
+  de: Website
+
+columns:
+  left:
+    width: 1/2
+    sections:
+      home:
+        headline: Aktuelle Startseite
+        type: pages
+        parent: site.find("home")
+        status: listed
+      extra:
+        headline: Unveröffentlicht
+        type: pages
+        parent: site.find("home")
+        status: unlisted
+      draft:
+        headline: Entwurf
+        type: pages
+        parent: site.find("home")
+        status: draft
+
+
+  right:
+    width: 1/2
+    sections:
+      published:
+        headline: Seiten
+        type: pages
+        status: listed
