--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,10 @@
-[*.{css,scss,less,js,json,ts,sass,html,hbs,mustache,phtml,html.twig,md,yml}]
+[*.{css,scss,less,js,json,ts,sass,html,php,hbs,mustache,phtml,html.twig,md,yml}]
 charset = utf-8
 indent_style = space
 indent_size = 2
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-insert_final_newline = true
 
 [*.md]
 indent_size = 4
