--- a/deployment/docker-local/Dockerfile
+++ b/deployment/docker-local/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
         libpng-dev \
-    && pecl install xdebug-2.8.1 \
+    && pecl install xdebug \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-enable xdebug \
