--- a/deployment/docker-local/docker-compose.yml
+++ b/deployment/docker-local/docker-compose.yml
@@ -6,5 +6,9 @@ services:
     image: php:7.4-apache-rewrite
     ports:
       - "127.0.0.1:80:80"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - ../../:/var/www/html
+      - ./conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
