--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Marco Köllner",
-            "email": "test@gcv1962.de",
+            "email": "gcv@mk-swe.de",
             "homepage": "https://gcv1962.de"
         }
     ],
